force-app/main/default/objects/ffr__ReportingFilter__c/ffr__ReportingFilter__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingfilterdefinition</customHelpPage>
    <label>Reporting Filter</label>
    <nameField>
        <label>Reporting Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>