force-app/main/default/objects/ffr__ReportingFilter__c/fields/ffr__Description__c.field-meta.xml
<CustomField>
    <fullName>ffr__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>