force-app/main/default/objects/ffr__ReportingFilter__c/fields/ffr__ReportingObject__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingObject__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reporting Object</label>
    <referenceTo>ffr__ReportingObject__c</referenceTo>
    <relationshipLabel>Reporting Filters</relationshipLabel>
    <relationshipName>ReportingFilters</relationshipName>
    <type>Lookup</type>
</CustomField>