force-app/main/default/objects/ffr__ReportingFilter__c/fields/ffr__UniqueName__c.field-meta.xml
<CustomField>
    <fullName>ffr__UniqueName__c</fullName>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>