force-app/main/default/objects/ffr__ReportingFilter__c/fields/ffr__Value__c.field-meta.xml
<CustomField>
    <fullName>ffr__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>