force-app/main/default/objects/ffr__ReportingFilter__c/listViews/ffr__Accounting_Time.listView-meta.xml
<ListView>
    <fullName>ffr__Accounting_Time</fullName>
    <columns>NAME</columns>
    <columns>ffr__UniqueName__c</columns>
    <columns>ffr__ReportingObject__c</columns>
    <columns>ffr__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ffr__UniqueName__c</field>
        <operation>startsWith</operation>
        <value>TA</value>
    </filters>
    <label>Accounting - Time</label>
    <language>en_US</language>
</ListView>