force-app/main/default/objects/ffr__ReportingFilter__c/listViews/ffr__All.listView-meta.xml
<ListView>
    <fullName>ffr__All</fullName>
    <columns>NAME</columns>
    <columns>ffr__UniqueName__c</columns>
    <columns>ffr__ReportingObject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>